<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="9dp"
        app:cardElevation="9dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            app:srcCompat="@drawable/add_location"
            android:id="@+id/buttonRegiao"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:onClick="filterEstado"
            android:textColor="@color/colorPrimary" />

        <ImageView
            app:srcCompat="@drawable/raca"
            android:id="@+id/buttonCategoria"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:onClick="filterCategoria"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
    </android.support.v7.widget.CardView>
    <com.example.mechatronicse.projetocapstoneparte2.helper.EmptyRecyclerView
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:id="@+id/recyclerAnunciosPublicos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:visibility="gone"
        android:id="@+id/mEmptyStateTextView"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sem_conexao" />


    <TextView
        android:id="@+id/empty_view"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#aaa"
        android:text="@string/nenhum_cao_anunciado" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="9dp"
        android:clickable="@string/click_true"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/add_photos" />

</FrameLayout>